# efficient_ai_agentic_assistant

./: .gitignore  AI_Researcher_-_Task.md  README.md  pyproject.toml  training_plan.md
efficient_ai_planner/src/agentic_ai_assistant/: example_agents.py
efficient_ai_planner/src/data/: create_dataset.py  data_loader.py  enhanced_create_dataset.py  enhanced_dataset_generator.py  explore_data.ipynb
efficient_ai_planner/src/data/data/enhanced_synthetic_data/: gemini_cot_meeting.jsonl  step_by_step_meeting.jsonl
efficient_ai_planner/src/data/data/output_data_eval/: eval_calendar.json
efficient_ai_planner/src/data/data/training_datasets/: data-00000-of-00001.arrow  dataset_info.json  state.json
efficient_ai_planner/src/evaluator/: evaluate_calendar_scheduling.py  run_evaluations.py
efficient_ai_planner/src/inference/: load_model.py
efficient_ai_planner/src/trainer/: example_training.py  example_training_dpo.py  train_planner.py
google_adk_planner/: agent.py
google_adk_planner/sub_agents/information_gather/: __init__.py  agent.py  prompt.py
google_adk_planner/sub_agents/planner/: __init__.py  agent.py  prompt.py
utils/: json_parser.py
